@@ -113,7 +113,11 @@ sub _render {
          $r_no++;
       }
 
-      push @{ $self->hide }, { name => q(nRows), value => $r_no };
+      my $content = $self->_inflate(  { name    => q(_nrows),
+                                        default => $r_no,
+                                        type    => q(hidden),
+                                        widget  => 1 } );
+      push @{ $self->hide }, { content => $content };
 
       return $hacc->table( { cellpadding => 0, cellspacing => 0 }, $rows );
    }
@@ -192,7 +196,11 @@ sub _render {
 
    $rows  = $hacc->tr( $cells ).$rows;
 
-   push @{ $self->hide }, { name  => q(nRows), value => $r_no };
+   my $content = $self->_inflate(  { name    => q(_nrows),
+                                     default => $r_no,
+                                     type    => q(hidden),
+                                     widget  => 1 } );
+   push @{ $self->hide }, { content => $content };
 
    return $hacc->table( $rows );
 }
