@@ -8,15 +8,15 @@ use parent qw(HTML::FormWidgets);
 
 use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev$ =~ /\d+/gmx );
 
-__PACKAGE__->mk_accessors( qw(dropcap) );
+__PACKAGE__->mk_accessors( qw(dropcap markdown) );
 
 sub init {
    my ($self, $args) = @_;
 
-   $self->container( 0 );
-   $self->dropcap(   0 );
-   $self->text(      q() );
-
+   $self->container(  0 );
+   $self->dropcap(    0 );
+   $self->markdown(   0 );
+   $self->text(       q() );
    $self->NEXT::init( $args );
    return;
 }
@@ -24,7 +24,9 @@ sub init {
 sub _render {
    my ($self, $args) = @_; my ($markup, $text);
 
-   ($text = $self->text || $self->msg( $self->name )) =~ s{ \A \n }{}msx;
+   $text    = $self->text;
+   $text    = $self->text_obj->markdown( $text ) if ($self->markdown);
+   ($text ||= $self->msg( $self->name )) =~ s{ \A \n }{}msx;
 
    return unless ($text);
 
